added hosting and most popular on small device

--- a/reservia.html
+++ b/reservia.html
@@ -116,103 +116,144 @@
             <div class="contains_hosting">
                 <h1 id="hosting">Hébergements à Marseille</h1>
                 <div id="pics_hosting">
-                    <div class="pics_hosting_1">
-                           <div class="description_pics_top">
-                                <h2>Auberge la Cannebièrre</h2>
-                                <span>Nuit à partir de <strong>25€</strong></span>
-                                <div class="stars">
-                                    <div class="stars_blue">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <div class="stars_grey">
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                </div>
-                            </div>
-                    </div>
-                    <div class="pics_hosting_2">
-                            <div class="description_pics_top"> 
-                                <h2>Hôtel du port</h2>
-                                <span>Nuit à partir de <strong>52€</strong></span>
-                                <div class="stars">
-                                    <div class="stars_blue">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                </div>
-                            </div>    
-                    </div>
-                    <div class="pics_hosting_3">
-                            <div class="description_pics_top">   
-                                <h2>Hôtel Les mouettes</h2>
-                                <span>Nuit à partir de <strong>76€</strong></span>
-                                <div class="stars">
-                                    <div class="stars_blue">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <div class="stars_grey">
-                                        <i class="fas fa-star"></i>
+                    <div class="hosting_1">
+                        <a href="#">
+                        <div class="pics_hosting_1">
+                            <div class="contain_description_pics_top">
+                                <div class="description_pics1">
+                                    <h2>Auberge la Cannebièrre</h2>
+                                    <span>Nuit à partir de <strong>25€</strong></span>
+                                    <div class="stars">
+                                        <div class="stars_blue">
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                        </div>
+                                        <div class="stars_grey">
+                                            <i class="fas fa-star"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        </a>
                     </div>
-                    <div class="pics_hosting_4">
-                            <div class="description_pics_bottom">
-                                <h2>Hôtel de la mer</h2>
-                                <span>Nuit à partir de <strong>46€</strong></span>
-                                <div class="stars">
-                                    <div class="stars_blue">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <div class="stars_grey">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
+
+                    <div class="hosting_2">
+                        <a href="#">
+                        <div class="pics_hosting_2">
+                                <div class="contain_description_pics_top">
+                                    <div class="description_pics2">
+                                        <h2>Hôtel du port</h2>
+                                        <span>Nuit à partir de <strong>52€</strong></span>
+                                        <div class="stars">
+                                            <div class="stars_blue">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                        </div>
+                        </a>
                     </div>
-                    <div class="pics_hosting_5">
-                            <div class="description_pics_bottom">
-                                <h2>Auberge Le Panier</h2>
-                                <span>Nuit à partir de <strong>23€</strong></span>
-                                <div class="stars">
-                                    <div class="stars_blue">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <div class="stars_grey">
-                                        <i class="fas fa-star"></i>
+
+                    <div class="hosting_3">
+                        <a href="#">
+                        <div class="pics_hosting_3">
+                                <div class="contain_description_pics_top"> 
+                                    <div class="description_pics3">  
+                                        <h2>Hôtel Les mouettes</h2>
+                                        <span>Nuit à partir de <strong>76€</strong></span>
+                                        <div class="stars">
+                                            <div class="stars_blue">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <div class="stars_grey">
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                        </div>
+                        </a>
                     </div>
-                    <div class="pics_hosting_6">
-                            <div class="description_pics_bottom">
-                                <h2>Hôtel chez Amina</h2>
-                                <span>Nuit à partir de <strong>96€</strong></span>
-                                <div class="stars">
-                                    <div class="stars_blue">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
+
+                    <div class="hosting_4">
+                        <a href="#">
+                        <div class="pics_hosting_4">
+                                <div class="contain_description_pics_bottom">
+                                    <div class="description_pics4">
+                                        <h2>Hôtel de la mer</h2>
+                                        <span>Nuit à partir de <strong>46€</strong></span>
+                                        <div class="stars">
+                                            <div class="stars_blue">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <div class="stars_grey">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                        </div>
+                        </a>
+                    </div>
+
+                    <div class="hosting_5">
+                        <a href="#">
+                        <div class="pics_hosting_5">
+                                <div class="contain_description_pics_bottom">
+                                    <div class="description_pics5">
+                                        <h2>Auberge Le Panier</h2>
+                                        <span>Nuit à partir de <strong>23€</strong></span>
+                                        <div class="stars">
+                                            <div class="stars_blue">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <div class="stars_grey">
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
+                        </a>
+                    </div>
+
+                    <div class="hosting_6">
+                        <a href="#">
+                        <div class="pics_hosting_6">
+                                <div class="contain_description_pics_bottom">
+                                    <div class="description_pics6">
+                                        <h2>Hôtel chez Amina</h2>
+                                        <span>Nuit à partir de <strong>96€</strong></span>
+                                        <div class="stars">
+                                            <div class="stars_blue">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
+                        </a>
                     </div>
                 </div>
 
