--- a/reservia.html
+++ b/reservia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
 
     <header>
 
-        <div id="logo_reservia"><img src="logo/Reservia@3x.png" alt="#"></div>
+        <div class="logo_reservia"><img src="logo/Reservia@3x.png" alt="#"></div>
 
         <nav>
                 <a href="#hosting" class="nav_hosting">Hébergements</a>
@@ -29,21 +29,21 @@
     <!--paragraphes-->
 
     <section>
-        <div class="title1">
+        <div class="section_title">
             <h1> Trouvez votre hébergement pour des vacances de rêve</h1>
         
         </div>
 
-        <div class="span1">
+        <div class="section_sub-title">
             <span>En plein centre ville ou en pleine nature</span>    
         </div>
 
 
     <!--recherche localisation-->
 
-        <div id="location">
+        <div class="location">
 
-            <div class="logo_loc">
+            <div class="logo_location">
                 <i class="fas fa-map-marker-alt"></i>
             </div>
 
@@ -66,33 +66,33 @@
 
     <!--filters-->
 
-        <div id="filters">
+        <div class="filters">
 
                 <h1>Filtres</h1>
 
-            <div id="economique">
-                <div id="logo_billet">
+            <div class="contains_economique">
+                <div class="logo_billet">
                     <i class="fas fa-money-bill-wave"></i>
                 </div>
                 <button class="btn economique">Économique</button>
             </div>
 
-            <div id="familial">
-                <div id="logo_child">
+            <div class="contains_familial">
+                <div class="logo_child">
                     <i class="fas fa-child"></i>
                 </div>
                 <button class="btn familial">Familial</button>
             </div>
 
-            <div id="romantique">
-                <div id="logo_coeur">
+            <div class="contains_romantique">
+                <div class="logo_coeur">
                     <i class="fas fa-heart"></i>
                 </div>
                 <button class="btn romantique">Romantique</button>
             </div>
 
-            <div id="animaux_autorisé">
-                <div id="logo_chien">
+            <div class="contains_animaux_autorisé">
+                <div class="logo_chien">
                     <i class="fas fa-dog"></i>
                 </div>
                 <button class="btn animaux_autorisé">Animaux autorisés</button>
@@ -101,8 +101,8 @@
 
 <!--informations-->
 
-        <div id="informations">
-            <div id="logo_informations">
+        <div class="informations">
+            <div class="logo_informations">
                 <i class="fas fa-info"></i>
             </div>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
@@ -114,13 +114,13 @@
     <section>
         <div class="section">
             <div class="contains_hosting">
-                <h1 id="hosting">Hébergements à Marseille</h1>
-                <div id="pics_hosting">
+                <h1 class="hosting">Hébergements à Marseille</h1>
+                <div class="picture_hosting">
                     <div class="hosting_1">
                         <a href="#">
-                        <div class="pics_hosting_1">
-                            <div class="contain_description_pics_top">
-                                <div class="description_pics1">
+                        <div class="picture_hosting_1">
+                            <div class="contain_description_picture_top">
+                                <div class="description_picture1">
                                     <h2>Auberge la Cannebièrre</h2>
                                     <span>Nuit à partir de <strong>25€</strong></span>
                                     <div class="stars">
@@ -142,9 +142,9 @@
 
                     <div class="hosting_2">
                         <a href="#">
-                        <div class="pics_hosting_2">
-                                <div class="contain_description_pics_top">
-                                    <div class="description_pics2">
+                        <div class="picture_hosting_2">
+                                <div class="contain_description_picture_top">
+                                    <div class="description_picture2">
                                         <h2>Hôtel du port</h2>
                                         <span>Nuit à partir de <strong>52€</strong></span>
                                         <div class="stars">
@@ -164,9 +164,9 @@
 
                     <div class="hosting_3">
                         <a href="#">
-                        <div class="pics_hosting_3">
-                                <div class="contain_description_pics_top"> 
-                                    <div class="description_pics3">  
+                        <div class="picture_hosting_3">
+                                <div class="contain_description_picture_top"> 
+                                    <div class="description_picture3">  
                                         <h2>Hôtel Les mouettes</h2>
                                         <span>Nuit à partir de <strong>76€</strong></span>
                                         <div class="stars">
@@ -188,9 +188,9 @@
 
                     <div class="hosting_4">
                         <a href="#">
-                        <div class="pics_hosting_4">
-                                <div class="contain_description_pics_bottom">
-                                    <div class="description_pics4">
+                        <div class="picture_hosting_4">
+                                <div class="contain_description_picture_bottom">
+                                    <div class="description_picture4">
                                         <h2>Hôtel de la mer</h2>
                                         <span>Nuit à partir de <strong>46€</strong></span>
                                         <div class="stars">
@@ -212,9 +212,9 @@
 
                     <div class="hosting_5">
                         <a href="#">
-                        <div class="pics_hosting_5">
-                                <div class="contain_description_pics_bottom">
-                                    <div class="description_pics5">
+                        <div class="picture_hosting_5">
+                                <div class="contain_description_picture_bottom">
+                                    <div class="description_picture5">
                                         <h2>Auberge Le Panier</h2>
                                         <span>Nuit à partir de <strong>23€</strong></span>
                                         <div class="stars">
@@ -236,9 +236,9 @@
 
                     <div class="hosting_6">
                         <a href="#">
-                        <div class="pics_hosting_6">
-                                <div class="contain_description_pics_bottom">
-                                    <div class="description_pics6">
+                        <div class="picture_hosting_6">
+                                <div class="contain_description_picture_bottom">
+                                    <div class="description_picture6">
                                         <h2>Hôtel chez Amina</h2>
                                         <span>Nuit à partir de <strong>96€</strong></span>
                                         <div class="stars">
@@ -257,7 +257,7 @@
                     </div>
                 </div>
 
-                    <span class="">Afficher plus</span>
+                    <span class=""> <strong>Afficher plus</strong></span>
 
             </div>
 
@@ -268,10 +268,10 @@
                         <i class="fas fa-chart-line"></i>
                     </div>
                 </div>
-                <div id="pics_most_popular">
-                    <div class="pics_most_popular">
-                        <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="pics"></a>
-                        <div class="description_pics_most_popular1">
+                <div class="picture_most_popular">
+                    <div class="picture_most_popular">
+                        <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="picture"></a>
+                        <div class="description_picture_most_popular1">
                             <h2>Hôtel Le soleil du </br> matin</h2>
                             <span>Nuit à partir de <strong>128€</strong></span>
                             <div class="stars_most_popular">
@@ -285,9 +285,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pics_most_popular">
-                        <a href="#"><img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="pics"></a>
-                        <div class="description_pics_most_popular2">
+                    <div class="picture_most_popular">
+                        <a href="#"><img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="picture"></a>
+                        <div class="description_picture_most_popular2">
                             <h2>Au coeur de l'eau </br> chambre d'hôtes</h2>
                             <span>Nuit à partir de <strong>71€</strong></span>
                             <div class="stars_most_popular">
@@ -303,9 +303,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pics_most_popular">
-                        <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="pics"></a>
-                        <div class="description_pics_most_popular3">
+                    <div class="picture_most_popular">
+                        <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="picture"></a>
+                        <div class="description_picture_most_popular3">
                             <h2>Hôtel tout bleu et </br> blanc</h2>
                             <span>Nuit à partir de <strong>68€</strong></span>
                             <div class="stars_most_popular">
@@ -332,34 +332,34 @@
         <div class="section">
             <div class="contains_activity">
                 <h1 class="activity">Activités à Marseille</h1>
-                    <div class="pics_activity">
-                        <div class="pics1">
-                            <a href="#"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="pics_Activity"></a>
+                    <div class="picture_activity">
+                        <div class="picture1">
+                            <a href="#"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="picture_Activity"></a>
                                 <h2>Vieux Port</h2>
                         </div>
 
-                        <div class="pics2">
-                            <a href="#"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="pics_Activity"></a>
+                        <div class="picture2">
+                            <a href="#"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="picture_Activity"></a>
                                 <h2>Port de Pomègues</h2>
                         </div>
 
-                        <div class="pics3">
-                            <a href="#"><img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="pics_Activity"></a>
+                        <div class="picture3">
+                            <a href="#"><img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="picture_Activity"></a>
                                 <h2>îles du Frioul</h2>
                         </div>
 
-                        <div class="pics4">
-                            <a href="#"><img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="pics_Activity"></a>
+                        <div class="picture4">
+                            <a href="#"><img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="picture_Activity"></a>
                                 <h2>Parc National des Calanques</h2>
                         </div>
 
-                        <div class="pics5">
-                            <a href="#"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="pics_Activity"></a>
+                        <div class="picture5">
+                            <a href="#"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="picture_Activity"></a>
                                 <h2>Notre-Dame-de-la-Garde</h2>
                         </div>
 
-                        <div class="pics6">
-                            <a href="#"><img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="pics_Activity"></a>
+                        <div class="picture6">
+                            <a href="#"><img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="picture_Activity"></a>
                                 <h2>Parc Longchamp</h2>
                         </div>
                     </div>
