--- a/reservia.html
+++ b/reservia.html
@@ -19,7 +19,7 @@
 
         <nav>
                 <a href="#hosting" class="nav_hosting">Hébergements</a>
-                <a href="#activity">Activités</a>
+                <a href="#activity"class="nav_activity">Activités</a>
                 <a href="#" id="inscription">S'inscrire</a>
         </nav>
         
@@ -114,7 +114,7 @@
     <section>
         <div class="section">
             <div class="contains_hosting">
-                <h1 class="hosting">Hébergements à Marseille</h1>
+                <h1 id="hosting">Hébergements à Marseille</h1>
                 <div class="picture_hosting">
                     <div class="hosting_1">
                         <a href="#">
@@ -122,7 +122,7 @@
                             <div class="contain_description_picture_top">
                                 <div class="description_picture1">
                                     <h2>Auberge la Cannebièrre</h2>
-                                    <span>Nuit à partir de <strong>25€</strong></span>
+                                    <span>Nuit à partir de 25<strong>€</strong></span>
                                     <div class="stars">
                                         <div class="stars_blue">
                                             <i class="fas fa-star"></i>
@@ -146,7 +146,7 @@
                                 <div class="contain_description_picture_top">
                                     <div class="description_picture2">
                                         <h2>Hôtel du port</h2>
-                                        <span>Nuit à partir de <strong>52€</strong></span>
+                                        <span>Nuit à partir de 52<strong>€</strong></span>
                                         <div class="stars">
                                             <div class="stars_blue">
                                                 <i class="fas fa-star"></i>
@@ -168,7 +168,7 @@
                                 <div class="contain_description_picture_top"> 
                                     <div class="description_picture3">  
                                         <h2>Hôtel Les mouettes</h2>
-                                        <span>Nuit à partir de <strong>76€</strong></span>
+                                        <span>Nuit à partir de 76<strong>€</strong></span>
                                         <div class="stars">
                                             <div class="stars_blue">
                                                 <i class="fas fa-star"></i>
@@ -192,7 +192,7 @@
                                 <div class="contain_description_picture_bottom">
                                     <div class="description_picture4">
                                         <h2>Hôtel de la mer</h2>
-                                        <span>Nuit à partir de <strong>46€</strong></span>
+                                        <span>Nuit à partir de 46<strong>€</strong></span>
                                         <div class="stars">
                                             <div class="stars_blue">
                                                 <i class="fas fa-star"></i>
@@ -216,7 +216,7 @@
                                 <div class="contain_description_picture_bottom">
                                     <div class="description_picture5">
                                         <h2>Auberge Le Panier</h2>
-                                        <span>Nuit à partir de <strong>23€</strong></span>
+                                        <span>Nuit à partir de 23<strong>€</strong></span>
                                         <div class="stars">
                                             <div class="stars_blue">
                                                 <i class="fas fa-star"></i>
@@ -240,7 +240,7 @@
                                 <div class="contain_description_picture_bottom">
                                     <div class="description_picture6">
                                         <h2>Hôtel chez Amina</h2>
-                                        <span>Nuit à partir de <strong>96€</strong></span>
+                                        <span>Nuit à partir de 96<strong>€</strong></span>
                                         <div class="stars">
                                             <div class="stars_blue">
                                                 <i class="fas fa-star"></i>
@@ -264,7 +264,7 @@
             <div class="most_popular">
                 <div class="header">
                     <h1>Les plus populaires</h1>
-                    <div id="logo_header">
+                    <div class="logo_header">
                         <i class="fas fa-chart-line"></i>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                         <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="picture"></a>
                         <div class="description_picture_most_popular1">
                             <h2>Hôtel Le soleil du </br> matin</h2>
-                            <span>Nuit à partir de <strong>128€</strong></span>
+                            <span>Nuit à partir de 128<strong>€</strong></span>
                             <div class="stars_most_popular">
                                 <div class="stars_blue">
                                     <i class="fas fa-star"></i>
@@ -289,7 +289,7 @@
                         <a href="#"><img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="picture"></a>
                         <div class="description_picture_most_popular2">
                             <h2>Au coeur de l'eau </br> chambre d'hôtes</h2>
-                            <span>Nuit à partir de <strong>71€</strong></span>
+                            <span>Nuit à partir de 71<strong>€</strong></span>
                             <div class="stars_most_popular">
                                 <div class="stars_blue">
                                     <i class="fas fa-star"></i>
@@ -307,7 +307,7 @@
                         <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="picture"></a>
                         <div class="description_picture_most_popular3">
                             <h2>Hôtel tout bleu et </br> blanc</h2>
-                            <span>Nuit à partir de <strong>68€</strong></span>
+                            <span>Nuit à partir de 68<strong>€</strong></span>
                             <div class="stars_most_popular">
                                 <div class="stars_blue">
                                     <i class="fas fa-star"></i>
@@ -331,7 +331,7 @@
     <section>
         <div class="section">
             <div class="contains_activity">
-                <h1 class="activity">Activités à Marseille</h1>
+                <h1 id="activity">Activités à Marseille</h1>
                     <div class="picture_activity">
                         <div class="picture1">
                             <a href="#"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="picture_Activity"></a>
