resize block_pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Reservia</title>
 </head>
 <body>
-    <div class="block_pages">
+    <div id="block_pages">
         <!--Header-->
 
         <header>
