--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </a>
                     </div>
 
-                    <div class="hosting_2">
+                    <div class="hosting_1">
                         <a href="#">
                         <div class="picture_hosting_2">
                                 <div class="contain_description_picture_top">
@@ -162,7 +162,7 @@
                         </a>
                     </div>
 
-                    <div class="hosting_3">
+                    <div class="hosting_1">
                         <a href="#">
                         <div class="picture_hosting_3">
                                 <div class="contain_description_picture_top"> 
@@ -186,7 +186,7 @@
                         </a>
                     </div>
 
-                    <div class="hosting_4">
+                    <div class="hosting_1">
                         <a href="#">
                         <div class="picture_hosting_4">
                                 <div class="contain_description_picture_bottom">
@@ -210,7 +210,7 @@
                         </a>
                     </div>
 
-                    <div class="hosting_5">
+                    <div class="hosting_1">
                         <a href="#">
                         <div class="picture_hosting_5">
                                 <div class="contain_description_picture_bottom">
@@ -234,7 +234,7 @@
                         </a>
                     </div>
 
-                    <div class="hosting_6">
+                    <div class="hosting_1">
                         <a href="#">
                         <div class="picture_hosting_6">
                                 <div class="contain_description_picture_bottom">
@@ -379,8 +379,8 @@
 
         <div class="footer_hosting">
             <h3>Nos hébergements</h3>
-            <a href="#"><span>charte qualité</span></a>
-            <a href="#"><span>soumettre votre hôtel</span></a>
+            <a href="#"><span>Charte qualité</span></a>
+            <a href="#"><span>Soumettre votre hôtel</span></a>
         </div>
 
         <div class="footer_assistance">
