added medium-device + reorganized html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reservia.css">
     <link rel="stylesheet" media="screen and (max-width: 375px)" href="small-device.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="medium-device.css">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
@@ -70,32 +71,32 @@
 
                 <h1>Filtres</h1>
 
-            <div class="contains_economique">
-                <div class="logo_billet">
+            <div class="contains_economic">
+                <div class="logo_ticket">
                     <i class="fas fa-money-bill-wave"></i>
                 </div>
-                <button class="btn economique">Économique</button>
+                <button class="btn economic">Économique</button>
             </div>
 
-            <div class="contains_familial">
+            <div class="contains_family">
                 <div class="logo_child">
                     <i class="fas fa-child"></i>
                 </div>
-                <button class="btn familial">Familial</button>
+                <button class="btn family">Familial</button>
             </div>
 
-            <div class="contains_romantique">
-                <div class="logo_coeur">
+            <div class="contains_romantic">
+                <div class="logo_heart">
                     <i class="fas fa-heart"></i>
                 </div>
-                <button class="btn romantique">Romantique</button>
+                <button class="btn romantic">Romantique</button>
             </div>
 
-            <div class="contains_animaux_autorisé">
-                <div class="logo_chien">
+            <div class="contains_pets_allowed">
+                <div class="logo_dog">
                     <i class="fas fa-dog"></i>
                 </div>
-                <button class="btn animaux_autorisé">Animaux autorisés</button>
+                <button class="btn pets_allowed">Animaux autorisés</button>
                 </div>
         </div>
 
@@ -262,9 +263,9 @@
             </div>
 
             <div class="most_popular">
-                <div class="header">
+                <div class="header_most_popular">
                     <h1>Les plus populaires</h1>
-                    <div class="logo_header">
+                    <div class="logo_header_most_popular">
                         <i class="fas fa-chart-line"></i>
                     </div>
                 </div>
