--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reservia.css">
     <link rel="stylesheet" media="screen and (max-width: 375px)" href="small-device.css">
-    <link rel="stylesheet" media="screen and (min-width: 768px)" href="medium-device.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="medium-device.css">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
