modification width small and medium size

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reservia.css">
-    <link rel="stylesheet" media="screen and (max-width: 375px)" href="small-device.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="medium-device.css">
+    <link rel="stylesheet" media="screen and (max-width: 767px)" href="small-device.css">
+    <link rel="stylesheet" media="screen and (max-width: 979px) and (min-width: 768px) " href="medium-device.css">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
 <body>
+<div id="block_pages">
 
     <!--Header-->
 
@@ -388,5 +389,6 @@
             <a href="#"><span>Nous contacter</span></a>
         </div>
     </footer>
+</div>
 </body>
 </html>
