reorganized picture activity

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
             <div class="input">
                     <p>
-                        <label for="city">Marseille, France</label>
-                        <input type="text" />
+                        <label for="city"></label>
+                        <input type="text" placeholder="Marseille, France"/>
                     </p>
             </div>
 
@@ -338,14 +338,16 @@
                                 <h2>Vieux Port</h2>
                         </div>
 
-                        <div class="picture2">
-                            <a href="#"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="picture_Activity"></a>
-                                <h2>Port de Pomègues</h2>
-                        </div>
+                        <div class="picture_activity2-3">
+                            <div class="picture2">
+                                <a href="#"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="picture_Activity"></a>
+                                    <h2>Port de Pomègues</h2>
+                            </div>
 
-                        <div class="picture3">
-                            <a href="#"><img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="picture_Activity"></a>
-                                <h2>îles du Frioul</h2>
+                            <div class="picture3">
+                                <a href="#"><img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="picture_Activity"></a>
+                                    <h2>îles du Frioul</h2>
+                            </div>
                         </div>
 
                         <div class="picture4">
@@ -353,14 +355,16 @@
                                 <h2>Parc National des Calanques</h2>
                         </div>
 
-                        <div class="picture5">
-                            <a href="#"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="picture_Activity"></a>
-                                <h2>Notre-Dame-de-la-Garde</h2>
-                        </div>
+                        <div class="picture_activity5-6">
+                            <div class="picture5">
+                                <a href="#"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="picture_Activity"></a>
+                                    <h2>Notre-Dame-de-la-Garde</h2>
+                            </div>
 
-                        <div class="picture6">
-                            <a href="#"><img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="picture_Activity"></a>
-                                <h2>Parc Longchamp</h2>
+                            <div class="picture6">
+                                <a href="#"><img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="picture_Activity"></a>
+                                    <h2>Parc Longchamp</h2>
+                            </div>
                         </div>
                     </div>
             </div>
