added css folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reservia.css">
-    <link rel="stylesheet" media="screen and (max-width: 760px)" href="small-device.css">
-    <link rel="stylesheet" media="screen and (max-width: 979px)" href="medium-device.css">
+    <link rel="stylesheet" href="css/reservia.css">
+    <link rel="stylesheet" media="screen and (max-width: 760px)" href="css/small-device.css">
+    <link rel="stylesheet" media="screen and (max-width: 979px)" href="css/medium-device.css">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
@@ -20,8 +20,10 @@
         <div class="logo_reservia"><img src="logo/Reservia@3x.png" alt="#"></div>
 
         <nav>
+            <div class="contains_nav">
                 <a href="#hosting" class="nav_hosting">Hébergements</a>
                 <a href="#activity"class="nav_activity">Activités</a>
+            </div>
                 <a href="#" id="inscription">S'inscrire</a>
         </nav>
         
@@ -259,7 +261,7 @@
                     </div>
                 </div>
 
-                    <span class=""> <strong>Afficher plus</strong></span>
+                    <span> <strong>Afficher plus</strong></span>
 
             </div>
 
