modification on input and finalisation

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
           <div class="input">
             <p>
-              <label for="city"></label>
-              <input type="text" placeholder="Marseille, France" />
+              <label for="search"></label>
+              <input id="search" type="text" placeholder="Marseille, France" />
             </p>
           </div>
 
